--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,14 +46,15 @@ buildscript {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.1.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.firebase:firebase-client-android:2.5.2+'
+    //    compile 'com.firebase:firebase-client-android:2.5.2.+'
     compile 'com.google.firebase:firebase-database:9.0.2'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
 }
