--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.github.sundeepk:compact-calendar-view:1.8.4'
+    compile 'com.wdullaer:materialdatetimepicker:2.3.0'
 }
